# v3

./: .gitignore  .gitlab-ci.yml  Gemfile  LICENSE  Makefile  README.md  api.sh  main.cpp  makefile  meson.build  meson_options.txt  shard.yml
lib/: ct.rb  db.rb  fen.rb
meson/: linux_bundler.sh  post_install.py
src/: a.out  amethyst.cr  ct.c++  ct.hpp  db.cr  main  main.c++  main.cpp  main.hpp  pieces.hpp  position.cpp  position.cr  position.hpp  uci.cpp  uci.cr  uci.hpp
src/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/spec/: db.cpp  position.cpp  position.hpp  spec.c++  spec.cpp  spec.hpp  uci.cpp  uci.hpp
src/spec/fixtures/: bitboard.c++  uci.c++  uci.hpp  uci.hpp.gch
